moved scripts to separate page templates in case the website scales and security issues might arise

--- a/templates/customers.html
+++ b/templates/customers.html
@@ -61,3 +61,15 @@
 </div>
 
 {% endblock %}
+
+{% load static %}
+{% block styles %}
+<link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
+{% endblock %}
+
+{% block scripts %}
+<!-- Data tables plugins and scripts -->
+<script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
+<script src="{% static 'js/demo/datatables-demo.js' %}"></script>
+{% endblock %}
